// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  width: 100%;
  min-width: 100%;
  box-shadow: 0 0 1.5rem 0.4rem #EEF2F5;
  background-color: #FFF;
}

<Panel
  height="auto"
  width="100%"
>
  <styled.div
    height="auto"
    width="100%"
  >
    <div
      className="c0"
      height="auto"
      width="100%"
    >
      MyPanel
    </div>
  </styled.div>
</Panel>
`;

exports[`Panel should render correctly with height 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 200px;
  width: 100%;
  min-width: 100%;
  box-shadow: 0 0 1.5rem 0.4rem #EEF2F5;
  background-color: #FFF;
}

<Panel
  height="200px"
  width="100%"
>
  <styled.div
    height="200px"
    width="100%"
  >
    <div
      className="c0"
      height="200px"
      width="100%"
    >
      MyPanel
    </div>
  </styled.div>
</Panel>
`;

exports[`Panel should render correctly with width 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  width: 200px;
  min-width: 200px;
  box-shadow: 0 0 1.5rem 0.4rem #EEF2F5;
  background-color: #FFF;
}

<Panel
  height="auto"
  width="200px"
>
  <styled.div
    height="auto"
    width="200px"
  >
    <div
      className="c0"
      height="auto"
      width="200px"
    >
      MyPanel
    </div>
  </styled.div>
</Panel>
`;
